// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsedHeader render nothing if not collapsed 1`] = `false`;

exports[`CollapsedHeader renders 1`] = `
<Fragment>
  <header
    className="d-flex shadow-sm align-items-center learner-variant-header"
  >
    <IconButton
      alt="Close"
      className="p-4"
      iconAs="Icon"
      invertColors={true}
      isActive={true}
      onClick={[MockFunction toggleIsOpen]}
      variant="primary"
    />
    <mockConstructor />
  </header>
  <mockConstructor
    isOpen={false}
  />
</Fragment>
`;

exports[`CollapsedHeader renders with isOpen true 1`] = `
<Fragment>
  <header
    className="d-flex shadow-sm align-items-center learner-variant-header"
  >
    <IconButton
      alt="Menu"
      className="p-4"
      iconAs="Icon"
      invertColors={true}
      isActive={true}
      onClick={[MockFunction toggleIsOpen]}
      src={[MockFunction icons.Close]}
      variant="primary"
    />
    <mockConstructor />
  </header>
  <mockConstructor
    isOpen={true}
  />
</Fragment>
`;
